--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="Web site created using create-react-app" />
   <title>Módulo 3: Evaluación intermedia Alba Vidal</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Paytone+One&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="page">
 
   <div id="root"></div>
 
